added missing comma

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-  font-family: 'Earthbound' sans-serif;
+  font-family: 'Earthbound', sans-serif;
   background: url("img/noise.png") #dceefc;
   padding: 0;
   margin: 0;
