--- a/style.styl
+++ b/style.styl
@@ -1,5 +1,5 @@
 html, body
-  font-family 'Earthbound' sans-serif
+  font-family 'Earthbound', sans-serif
   background url("img/noise.png") #dceefc
   padding 0
   margin 0
